--- a/interactionAE/iAE_v2.ipynb
+++ b/interactionAE/iAE_v2.ipynb
@@ -12,8 +12,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-11T13:16:04.596194Z",
-     "start_time": "2019-07-11T13:16:04.593019Z"
+     "end_time": "2019-07-12T13:17:35.384585Z",
+     "start_time": "2019-07-12T13:17:35.381876Z"
     }
    },
    "outputs": [],
@@ -26,8 +26,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-11T13:16:05.427918Z",
-     "start_time": "2019-07-11T13:16:05.416843Z"
+     "end_time": "2019-07-12T13:17:36.894954Z",
+     "start_time": "2019-07-12T13:17:36.422364Z"
     }
    },
    "outputs": [],
@@ -46,8 +46,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-11T13:16:06.224208Z",
-     "start_time": "2019-07-11T13:16:06.031981Z"
+     "end_time": "2019-07-12T13:17:38.427234Z",
+     "start_time": "2019-07-12T13:17:38.198095Z"
     },
     "code_folding": [
      1,
@@ -68,8 +68,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-11T13:16:07.504487Z",
-     "start_time": "2019-07-11T13:16:07.501822Z"
+     "end_time": "2019-07-12T13:18:40.678668Z",
+     "start_time": "2019-07-12T13:18:40.301590Z"
     }
    },
    "outputs": [],
@@ -84,8 +84,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-11T13:16:07.932020Z",
-     "start_time": "2019-07-11T13:16:07.929079Z"
+     "end_time": "2019-07-12T13:18:41.192764Z",
+     "start_time": "2019-07-12T13:18:41.187024Z"
     }
    },
    "outputs": [],
@@ -100,8 +100,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-11T13:16:08.386699Z",
-     "start_time": "2019-07-11T13:16:08.384283Z"
+     "end_time": "2019-07-12T13:18:41.843933Z",
+     "start_time": "2019-07-12T13:18:41.841472Z"
     }
    },
    "outputs": [],
@@ -121,8 +121,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-11T13:16:10.952935Z",
-     "start_time": "2019-07-11T13:16:10.950482Z"
+     "end_time": "2019-07-12T13:18:44.416736Z",
+     "start_time": "2019-07-12T13:18:44.403921Z"
     }
    },
    "outputs": [],
@@ -135,8 +135,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T15:16:53.128639Z",
-     "start_time": "2019-07-10T15:16:53.125649Z"
+     "end_time": "2019-07-12T13:18:44.943154Z",
+     "start_time": "2019-07-12T13:18:44.940405Z"
     }
    },
    "outputs": [],
@@ -149,13 +149,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T15:17:20.509534Z",
-     "start_time": "2019-07-10T15:16:53.130814Z"
+     "end_time": "2019-07-12T13:19:12.948463Z",
+     "start_time": "2019-07-12T13:18:45.779217Z"
     }
    },
    "outputs": [],
    "source": [
-    "dataset.loadTrainSM(N_train_max=1e7)\n",
+    "dataset.loadTrainSM(N_train_max=1e6)\n",
     "dataset.charge(dataset.SMMix_train)"
    ]
   },
@@ -164,8 +164,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T15:17:22.793861Z",
-     "start_time": "2019-07-10T15:17:20.512218Z"
+     "end_time": "2019-07-12T13:19:15.520523Z",
+     "start_time": "2019-07-12T13:19:12.950237Z"
     }
    },
    "outputs": [],
@@ -185,9 +185,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T15:17:22.837414Z",
-     "start_time": "2019-07-10T15:17:22.796476Z"
-    }
+     "end_time": "2019-07-12T13:23:32.894640Z",
+     "start_time": "2019-07-12T13:23:32.857930Z"
+    },
+    "code_folding": [
+     49,
+     61,
+     71
+    ]
    },
    "outputs": [],
    "source": [
@@ -365,23 +370,23 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T15:17:22.864468Z",
-     "start_time": "2019-07-10T15:17:22.839586Z"
+     "end_time": "2019-07-12T13:23:33.979137Z",
+     "start_time": "2019-07-12T13:23:33.935543Z"
     },
     "code_folding": []
    },
    "outputs": [],
    "source": [
-    "Latent_dimension = int(2*dataset.inputs.shape[1])\n",
-    "Hidden_dimension = 5*dataset.inputs.shape[2]\n",
+    "Latent_dimension = int(0.8*dataset.inputs.shape[1])\n",
+    "Hidden_dimension = 4*dataset.inputs.shape[2]\n",
     "\n",
     "model = AEGraphNet(\n",
     "                   N_part=dataset.inputs.shape[1],\n",
     "                   N_features=dataset.inputs.shape[2],\n",
     "                   dim_hidden=Hidden_dimension,\n",
     "                   dim_latent=Latent_dimension,\n",
-    "                   De=10,\n",
-    "                   Do=10\n",
+    "                   De=5,\n",
+    "                   Do=5\n",
     "                  )\n",
     "\n",
     "print(model)\n",
@@ -396,14 +401,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T15:17:27.049625Z",
-     "start_time": "2019-07-10T15:17:22.866911Z"
+     "end_time": "2019-07-12T13:24:15.493114Z",
+     "start_time": "2019-07-12T13:24:11.475947Z"
     },
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "model.useGPU(1)"
+    "model.useGPU(int(AEversion)%8)"
    ]
   },
   {
@@ -418,8 +423,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T15:17:27.060395Z",
-     "start_time": "2019-07-10T15:17:27.051316Z"
+     "end_time": "2019-07-12T13:24:22.525580Z",
+     "start_time": "2019-07-12T13:24:22.517436Z"
     },
     "code_folding": []
    },
@@ -461,8 +466,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T15:17:27.065460Z",
-     "start_time": "2019-07-10T15:17:27.062181Z"
+     "end_time": "2019-07-12T13:24:31.174996Z",
+     "start_time": "2019-07-12T13:24:31.171873Z"
     },
     "code_folding": [
      0,
@@ -471,7 +476,7 @@
    },
    "outputs": [],
    "source": [
-    "training_params = {'batch_size': 5000,\n",
+    "training_params = {'batch_size': 1000,\n",
     "                   'shuffle': True,\n",
     "                   'num_workers': 3\n",
     "                  }\n",
@@ -488,8 +493,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T15:17:27.069228Z",
-     "start_time": "2019-07-10T15:17:27.067245Z"
+     "end_time": "2019-07-12T13:24:31.451958Z",
+     "start_time": "2019-07-12T13:24:31.449792Z"
     }
    },
    "outputs": [],
@@ -502,8 +507,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T15:17:27.075386Z",
-     "start_time": "2019-07-10T15:17:27.070864Z"
+     "end_time": "2019-07-12T13:24:31.894904Z",
+     "start_time": "2019-07-12T13:24:31.890352Z"
     },
     "code_folding": [
      3
@@ -533,8 +538,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T20:42:13.802514Z",
-     "start_time": "2019-07-10T15:17:27.077317Z"
+     "end_time": "2019-07-12T13:27:47.841705Z",
+     "start_time": "2019-07-12T13:24:43.145411Z"
     },
     "code_folding": [
      63
@@ -631,7 +636,7 @@
     "        scheduler.step(batch_loss[-1])\n",
     "\n",
     "        #### ---- Anomaly Detection monitor ---- ####\n",
-    "        if epoch%3 == 0:\n",
+    "        if False and epoch%3 == 0:\n",
     "            print('------------ Anomaly Detection monitor ------------')\n",
     "            BSM_eff['ep'].append(epoch)\n",
     "            dataset.loss['SMMix'] = np.zeros((0))\n",
@@ -691,8 +696,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T20:42:15.127504Z",
-     "start_time": "2019-07-10T20:42:13.828665Z"
+     "start_time": "2019-07-12T13:16:37.303Z"
     }
    },
    "outputs": [],
@@ -728,8 +732,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T20:42:17.726677Z",
-     "start_time": "2019-07-10T20:42:15.129340Z"
+     "start_time": "2019-07-12T13:16:37.307Z"
     },
     "code_folding": [
      3
@@ -780,8 +783,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T20:42:17.906371Z",
-     "start_time": "2019-07-10T20:42:17.728475Z"
+     "start_time": "2019-07-12T13:16:37.309Z"
     }
    },
    "outputs": [],
@@ -809,8 +811,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T20:42:27.688495Z",
-     "start_time": "2019-07-10T20:42:17.908126Z"
+     "start_time": "2019-07-12T13:16:37.311Z"
     },
     "code_folding": [
      0
@@ -840,8 +841,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T20:42:39.315952Z",
-     "start_time": "2019-07-10T20:42:27.691931Z"
+     "start_time": "2019-07-12T13:16:37.313Z"
     },
     "code_folding": [],
     "scrolled": true
@@ -881,8 +881,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T20:42:59.162552Z",
-     "start_time": "2019-07-10T20:42:39.318612Z"
+     "start_time": "2019-07-12T13:16:37.315Z"
     }
    },
    "outputs": [],
@@ -895,8 +894,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T20:44:29.321299Z",
-     "start_time": "2019-07-10T20:42:59.164366Z"
+     "start_time": "2019-07-12T13:16:37.317Z"
     },
     "code_folding": []
    },
@@ -924,8 +922,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T20:44:38.076144Z",
-     "start_time": "2019-07-10T20:44:29.324972Z"
+     "start_time": "2019-07-12T13:16:37.318Z"
     }
    },
    "outputs": [],
@@ -939,8 +936,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T20:44:42.964882Z",
-     "start_time": "2019-07-10T20:44:38.077953Z"
+     "start_time": "2019-07-12T13:16:37.321Z"
     },
     "code_folding": [
      1
@@ -987,8 +983,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T20:44:45.699737Z",
-     "start_time": "2019-07-10T20:44:42.966771Z"
+     "start_time": "2019-07-12T13:16:37.323Z"
     }
    },
    "outputs": [],
@@ -1001,8 +996,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T20:44:45.965640Z",
-     "start_time": "2019-07-10T20:44:45.703701Z"
+     "start_time": "2019-07-12T13:16:37.324Z"
     }
    },
    "outputs": [],
@@ -1028,8 +1022,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T20:45:57.151481Z",
-     "start_time": "2019-07-10T20:44:45.968656Z"
+     "start_time": "2019-07-12T13:16:37.329Z"
     }
    },
    "outputs": [],
@@ -1048,8 +1041,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-10T20:45:57.726345Z",
-     "start_time": "2019-07-10T20:45:57.153310Z"
+     "start_time": "2019-07-12T13:16:37.330Z"
     }
    },
    "outputs": [],
