--- a/denseAE/dAE_v11.ipynb
+++ b/denseAE/dAE_v11.ipynb
@@ -1129,7 +1129,7 @@
     "lval_feat = np.array(loss_history['val_feat'])\n",
     "plt.plot(x, lval_feat[:,0], '--.', label='NLL $P_T$', color='r')\n",
     "plt.plot(x, lval_feat[:,1], '--.', label='NLL $\\eta$', color='b')\n",
-    "plt.plot(x, lval_feat[:,2], '--.', label='NLL $\\phi$', color='b')\n",
+    "plt.plot(x, lval_feat[:,2], '--.', label='NLL $\\phi$', color='g')\n",
     "plt.plot(x, lval_feat[:,3], '--.', label='NLL charge-ID cat', color='k')\n",
     "\n",
     "plt.xlabel('Epoch')\n",
